<resources>

    <string name="app_name">npChat</string>
    <string name="scan">Scan</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="register">Register</string>
    <string name="publish">Publish</string>
    <string name="advertise">Advertise</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="share_photo">Share Photo?</string>
    <string name="send_photo">Send Photo</string>
    <string name="camera">Camera</string>
    <string name="received_images">See Photos</string>
    <string name="friends">Friends</string>
    <string name="files">Files</string>
    <string name="friends_title">Friends</string>
    <string name="no_friends">You currently haven\'t added any friends.</string>
    <string name="no_photos">No photos</string>

    <!--add friend activity-->
    <string name="display_qr">Display QR</string>
    <string name="scan_qr">Scan QR</string>
    <string name="view_friends">View Friends</string>

    <!--file activity-->
    <string name="share_files">Share Files</string>
    <string name="share_pics">Share Pictures</string>
    <string name="scan_file_qr">Scan File QR</string>
    <string name="display_file_qr">Display File QR</string>
    <string name="browse_rcvd">Browse RCVD</string>

    <!--login activity-->
    <string name="login_btn">Register</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>

    <!--qr exchange activity-->
    <string name="qr_me">QR Me</string>

    <!--select recepient activity-->
    <string name="send">Send</string>

    <!--settings activity-->
    <string name="change_photo">Change Photo</string>

    <!--sign up activity-->
    <string name="email_label">Email:</string>
    <string name="confirm_password_label">Confirm\nPassword:</string>
    <string name="submit">Submit</string>
    <string name="nfd_package">net.named_data.nfd</string>
    <string name="remove_account">Remove Account</string>

    <string name="certificate_prefix">cert</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="title_activity_send_friend_request">SendFriendRequestActivity</string>

    <string-array name="acc_type">
        <item>Mutual friend</item>
        <item>Domain</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="domain">Domain:</string>
    <string name="version_info">version 0.0.0</string>
    <string name="source"><u><i>Link to the source code</i></u></string>
    <string name="license_info">This app is licenced under GNU GPL v3.0</string>
    <string name="license_link"><u><i>Tap to view the complete license</i></u></string>
    <string name="contribution"><i>(Contribution and issues welcome)</i></string>
    <string name="share_friends_list">Share friends list</string>
</resources>
